--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -15,4 +15,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile project(":entity")
+    compile libs.mysql
+
 }
